# characters-dashboard

./: README.md  dashboard.py  pyproject.toml  python-interpreter.txt
characters_dashboard/: __init__.py  wiki_helper.py
