[tool.poetry]
name = "characters-dashboard"
version = "0.1.0"
description = ""
authors = ["Tiago Santos <tiagosn06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wikipedia = "^1.4.0"
streamlit = "^1.38.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
